add blocks and rwd

--- a/uikit-2.27.4/index2.html
+++ b/uikit-2.27.4/index2.html
@@ -67,14 +67,14 @@
                     <div class="tm-as3-block">
                         <ul>
                             <li>
-                                <a class=" head uk-text-middle" href="#">Пункт меню NO1</a>
+                                <a class=" head uk-text-middle" href="#">Название какой-то статьи</a>
                                 <div class="tm-as3-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eveniet quaerat nemo ex officia deleniti in reiciendis, dignissimos blanditiis architecto, inventore impedit. Voluptates!
                                     <div class="tm-as3-more uk-text-right"><a href="#">Подробнее</a></div>
                                 </div>
                             </li>
                             <li>
-                                <a class=" head uk-text-middle" href="#">Пункт меню NO2</a>
+                                <a class=" head uk-text-middle" href="#">Название какой-то ещё статьи</a>
                                 <div class="tm-as3-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eveniet quaerat nemo ex officia deleniti in reiciendis, dignissimos blanditiis architecto, inventore impedit. Voluptates!
                                     <div class="tm-as3-more uk-text-right"><a href="#">Подробнее</a></div>
@@ -133,13 +133,13 @@
                 <div class="tm-sec3-wrap">
                     <h2 class="tm-sec3-header">Примеры работ</h2>
                     <div class="tm-sec3-tpls-wrap">
-                        <div class="uk-grid">
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal1.jpg" alt="pic1"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal2.jpg" alt="pic2"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal3.jpg" alt="pic3"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal4.jpg" alt="pic4"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal5.jpg" alt="pic5"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal6.jpg" alt="pic6"></div>
+                        <div class="uk-grid tm-sec3-gal">
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal1.jpg" alt="pic1"></a></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal2.jpg" alt="pic2"></a></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal3.jpg" alt="pic3"></a></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal4.jpg" alt="pic4"></a></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal5.jpg" alt="pic5"></a></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><a href="#"> <img src="images/page2/gal6.jpg" alt="pic6"></a></div>
                         </div>
                         <div class="tm-sec3-more"><a href="#">Больше фотографий</a></div>
                     </div>
@@ -153,52 +153,64 @@
                     <div class="tm-sec4-tpls-wrap">
                         <div class="uk-grid">
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p1.png" alt="pic1">
-                                Абстрактные изображения
+                                Абстрактные изображения</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p2.png" alt="pic2">
-                                Винтаж
+                                Винтаж</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p3.png" alt="pic3">
-                                Еда и напитки
+                                Еда и напитки</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p4.png" alt="pic4">
-                                Животные/Дикая природа
+                                Животные/Дикая природа</a>
+                            </div>
+                            <div class="tm-palit uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle" style="height: 52px;">
+                                <a href="#">
+                                <img  src="images/page2/p5.png" alt="pic5">
+                                Здания/Достопримечательности</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
-                                <img src="images/page2/p5.png" alt="pic5">
-                                Здания/Достопримечательности
-                            </div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p6.png" alt="pic6">
-                                Искусство
+                                Искусство</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p7.png" alt="pic7">
-                                Парки/Природа
+                                Парки/Природа</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p8.png" alt="pic8">
-                                Предметы
+                                Предметы</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p9.png" alt="pic9">
-                                Природа
+                                Природа</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p10.png" alt="pic10">
-                                Транспорт
+                                Транспорт</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p11.png" alt="pic11">
-                                Разное
+                                Разное</a>
                             </div>
                             <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <a href="#">
                                 <img src="images/page2/p12.png" alt="pic12">
-                                Спорт/Отдых
+                                Спорт/Отдых</a>
                             </div>
                         </div>
                     </div>
@@ -206,6 +218,73 @@
             </section>
             <!-- sec4 end-->
         </div>
+        <section class="tm-calculation-wrap"><!-- Calculation Start -->
+
+                <div id="git" class="tm-content-full">
+                    <h1 class="uk-text-center">Заказать расчет стоимости</h1>
+                    <div class="tm-git-wrap">
+                        <div class="tm-git-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem eaque eveniet ipsam tempore aliquid doloribus dolores ut nulla nobis optio adipisci, debitis eligendi odio animi cum culpa quaerat nihil itaque est tenetur repellendus. Sapiente quia, numquam eius reiciendis ratione blanditiis dignissimos totam alias iste accusamus dolorum corporis itaque ea optio ex. Fugit in quisquam, ipsam, tempora consequuntur fuga atque vitae!
+                        </div>
+                        <div class="tm-git-form">
+                            <form class="uk-form">
+                                <div class="tm-git-form-input">
+                                    <input type="text" placeholder="Введите Ваше имя" class="uk-form-width-medium">
+                                </div>
+                                <div class="tm-git-form-input">
+                                    <input type="email" placeholder="Введите Ваш e-mail" class="uk-form-width-medium">
+                                </div>
+                                <div class="tm-git-form-input">
+                                    <input type="text" placeholder="Введите номер Вашего телефона" class="uk-form-width-medium">
+                                </div>
+                                <div class="tm-git-form-input">
+                                    <label><input id="phone-checkbox" type="checkbox">Позвонить мне</label>
+                                </div>
+                                <div class="tm-git-form-input">
+                                    <button>отправить заявку</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+        </section><!-- Calculation End -->
+        <section class="tm-contacts-wrap"><!-- Contacts Start -->
+
+                <div id="cont" class="tm-content-full">
+                    <h1 class="uk-text-center">Наши контакты</h1>
+                    <div class="tm-cont-wrap uk-grid">
+                        <div class="tm-cont-block uk-width-large-1-2 uk-width-medium-1-2 uk-width-small-1-1">
+                            <div class="tm-cont-block-text uk-text-right uk-text-center-small uk-margin-bottom">г. Москва, р-н Солнцево, ул. Родниковая, 20</div>
+                            <div class="tm-cont-block-text uk-text-right uk-text-center-small uk-margin-bottom">E-mail: zakaz@astam.ru</div>
+                        </div>
+                        <div class="tm-cont-block uk-width-large-1-2 uk-width-medium-1-2 uk-width-small-1-1">
+                            <div class="tm-cont-block-text uk-margin-bottom uk-text-center-small">Телефон многоканальный:</div>
+                            <div class="tm-cont-block-text uk-text-center-small">+7(499) 643-46-33</div>
+                        </div>
+                    </div>
+                </div>
+        </section><!-- Contacts End -->
+        <div class="tm-map-wrap"><!-- Map Start -->
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aef7a6f4ade763ab6c24f9259eaa0a511b5e9b12411ecacfe0be8c6a53c2fa108&amp;width=100%&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
+        </div><!-- Map End -->
+        <div class="tm-copy-wrap"><!-- Copyright Start -->
+            <div id="copy" class="tm-content-full uk-text-center">
+                ©  ASTA M. Модульные картины. 2017. Все права защищены.
+            </div>
+        </div><!-- Copyright Start -->
     </div>
+    <!-- Formstyler Plugin -->
+    <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
+    <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
+    <script src="js/formstyler-plugin/jquery.formstyler.min.js"></script>
+    <script>
+         (function($) { 
+             $(function() {
+
+                $('input, select').styler();
+
+            }); 
+         })(jQuery); 
+    </script> 
 </body>
 </html>
