--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -642,15 +642,15 @@
         <div id="tpls" class="tm-content-full">
             <h1 class="uk-text-center">Примеры работ</h1>
             <div class="tm-tpls-wrap">
-                <div class="uk-grid">
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work1.jpg" alt="work1"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work2.jpg" alt="work2"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work3.jpg" alt="work3"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work4.jpg" alt="work4"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work5.jpg" alt="work5"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work6.jpg" alt="work6"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work7.jpg" alt="work7"></div>
-                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><img src="images/tpls/work8.jpg" alt="work8"></div>
+                <div class="uk-grid tm-tpls-gal">
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work1.jpg" alt="work1"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work2.jpg" alt="work2"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work3.jpg" alt="work3"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work4.jpg" alt="work4"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work5.jpg" alt="work5"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work6.jpg" alt="work6"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work7.jpg" alt="work7"></a></div>
+                    <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom"><a href="#"><img src="images/tpls/work8.jpg" alt="work8"></a></div>
                 </div>
                 <div class="tm-tpls-button uk-text-center"><a href="#">посмотреть все работы</a></div>
             </div>
