rwd, markup corrections

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -73,39 +73,6 @@
 
 <div class="page-wrapper">
 
-    <!-- Home Slideshow Start -->
-    <div class="tm-home-slideshow uk-slidenav-position">
-        <img src="images/astam-img/bg-top-slider2.png" alt="" class="tm-home-slideshow-bg">
-        <div class="tm-home-slideshow-wrap uk-slidenav-position" data-uk-slideshow="{autoplay:true, autoplayInterval:4000}">
-            <div class="tm-home-slideshow-box">
-                <ul class="uk-slideshow">
-                    <li><img src="images/astam-img/top-slide-img-1.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-2.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-3.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-4.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-5.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-6.jpg" alt=""></li>
-                    <li><img src="images/astam-img/top-slide-img-7.jpg" alt=""></li>
-                </ul>
-
-            </div>
-            <ul class="uk-dotnav uk-flex-column uk-flex-center uk-flex-middle tm-home-slideshow-nav uk-position-z-index">
-                <li data-uk-slideshow-item="0"><a href=""></a></li>
-                <li data-uk-slideshow-item="1"><a href=""></a></li>
-                <li data-uk-slideshow-item="2"><a href=""></a></li>
-                <li data-uk-slideshow-item="3"><a href=""></a></li>
-                <li data-uk-slideshow-item="4"><a href=""></a></li>
-                <li data-uk-slideshow-item="5"><a href=""></a></li>
-                <li data-uk-slideshow-item="6"><a href=""></a></li>
-            </ul>
-        </div>
-        <div class="uk-animation-hover tm-home-slideshow-button">
-            <a href="#constructor" class="uk-animation-scale-down" data-uk-smooth-scroll>скомпоновать свой набор</a>
-        </div>
-
-    </div>
-    <!-- Home Slideshow End -->
-
     <div class="tm-header-wrapp">
         <!-- Header Start -->
         <header>
@@ -185,8 +152,43 @@
         </header>
         <!-- Header End -->
     </div>
+<!-- <div class="tm-cont-wrap"> -->
 
-    <div class="tm-content-wrap"><!-- .tm-content-wrap Start -->
+    
+
+    <div class="tm-cont-wrap"><!-- .tm-content-wrap Start -->
+        <!-- Home Slideshow Start -->
+        <div class="tm-home-slideshow uk-slidenav-position">
+            <img src="images/astam-img/bg-top-slider2.png" alt="" class="tm-home-slideshow-bg">
+            <div class="tm-home-slideshow-wrap uk-slidenav-position" data-uk-slideshow="{autoplay:true, autoplayInterval:4000}">
+                <div class="tm-home-slideshow-box">
+                    <ul class="uk-slideshow">
+                        <li><img src="images/astam-img/top-slide-img-1.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-2.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-3.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-4.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-5.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-6.jpg" alt=""></li>
+                        <li><img src="images/astam-img/top-slide-img-7.jpg" alt=""></li>
+                    </ul>
+
+                </div>
+                <ul class="uk-dotnav uk-flex-column uk-flex-center uk-flex-middle tm-home-slideshow-nav uk-position-z-index">
+                    <li data-uk-slideshow-item="0"><a href=""></a></li>
+                    <li data-uk-slideshow-item="1"><a href=""></a></li>
+                    <li data-uk-slideshow-item="2"><a href=""></a></li>
+                    <li data-uk-slideshow-item="3"><a href=""></a></li>
+                    <li data-uk-slideshow-item="4"><a href=""></a></li>
+                    <li data-uk-slideshow-item="5"><a href=""></a></li>
+                    <li data-uk-slideshow-item="6"><a href=""></a></li>
+                </ul>
+            </div>
+            <div class="uk-animation-hover tm-home-slideshow-button">
+                <a href="#constructor" class="uk-animation-scale-down" data-uk-smooth-scroll>скомпоновать свой набор</a>
+            </div>
+
+        </div>
+        <!-- Home Slideshow End -->
 
         <div id="constructor" class="tm-content-full">
             <h1 class="uk-text-center">Мощный конструктор картин</h1>
@@ -474,7 +476,7 @@
 
 
 
-</div>
+
 <div class="tm-content-wrap"><!-- Pics Start -->
 
         <div id="pics" class="tm-content-full">
@@ -708,11 +710,13 @@
 <div class="tm-content-wrap"><!-- Map Start -->
     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aef7a6f4ade763ab6c24f9259eaa0a511b5e9b12411ecacfe0be8c6a53c2fa108&amp;width=100%&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
 </div><!-- Map End -->
+</div>
 <div class="tm-content-wrap"><!-- Copyright Start -->
     <div id="copy" class="tm-content-full uk-text-center">
         ©  ASTA M. Модульные картины. 2017. Все права защищены.
     </div>
-</div><!-- Copyright Start -->
+</div><!-- Copyright End -->
+</div>
 
     <!-- Script for range input Start -->
     <script src="range-slider.js"></script>
