--- a/uikit-2.27.4/index2.html
+++ b/uikit-2.27.4/index2.html
@@ -31,6 +31,87 @@
     <link href="astam-paintings-style.css" rel="stylesheet">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="tm-header-wrapp">
+        <!-- Header Start -->
+        <header>
+            <div class="tm-header-topbox">
+                <div class="uk-container uk-container-center">
+                    <div class="uk-vertical-align">
+                        <div class="uk-display-inline-block uk-vertical-align-middle tm-header-topbox-logo">
+                            <a href="/"><img src="images/astam-img/logo.png" alt="logo AstaM"></a>
+                        </div>
+                        <div class="uk-display-inline-block uk-vertical-align-middle tm-header-topbox-name">
+                            <span class="tm-header-topbox-name1"><span>М</span>агазин</span><br>
+                            <span class="tm-header-topbox-name2"><span>м</span>одульных <span>к</span>артин</span>
+                        </div>
+                        <div class="uk-display-inline-block uk-vertical-align-middle tm-header-topbox-contacts">
+                            <span class="tm-header-topbox-phone"><i class="uk-icon-phone"></i>+7 (499) 643-46-33</span><br>
+                            <a href="#backcall" class="tm-header-topbox-backcall" data-uk-modal>Позвоните мне<i class="uk-icon-phone"></i></a>
+                            <div id="backcall" class="uk-modal tm-modal">
+                                <div class="uk-modal-dialog">
+                                    <h3 class="uk-text-center">Закажите обратный звонок и мы Вам перезвоним</h3>
+                                    <form class="uk-form">
+                                        <div class="uk-grid uk-grid-small">
+                                            <div class="uk-width-small-1-1 uk-width-medium-1-2"><input type="text" placeholder="Ваше имя" class="uk-width-1-1"></div>
+                                            <div class="uk-width-small-1-1 uk-width-medium-1-2"><input type="text" placeholder="Ваш телефон" class="uk-width-1-1"></div>
+                                            <div class="uk-width-small-1-1 uk-width-medium-1-2 uk-container-center">
+                                                <button class="uk-button uk-button-primary uk-width-1-1 uk-button-large">Позвоните мне</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <a class="uk-modal-close uk-close"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-display-inline-block uk-vertical-align-middle tm-header-topbox-cart">
+                            <a href="#">
+                                <span class="tm-header-topbox-cart-info">Сумма:<br><span class="tm-header-topbox-cart-price">6000 &#8381;</span></span>
+                                <i class="kot-icon kot-pricing-transactions-3"></i>
+                            </a>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="tm-header-menu" data-uk-sticky>
+                <div class="uk-container uk-container-center tm-header-nav">
+                    <nav class="uk-navbar uk-navbar-attached uk-navbar-flip">
+                        <div class="">
+                            <ul class="uk-navbar-nav uk-hidden-small">
+                                <li class="uk-active active"><a href="#">Главная</a></li>
+                                <li><a href="#">О нас</a></li>
+                                <li><a href="#">Типы картин</a></li>
+                                <li><a href="#">Галерея</a></li>
+                                <li><a href="#">Статьи</a></li>
+                                <li><a href="#">Отзывы</a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
+                            <a href="#topnavbar-mobile" class="uk-navbar-toggle uk-visible-small"  data-uk-offcanvas="{mode:'slide'}"></a>
+                        </div>
+                    </nav>
+                    <div id="topnavbar-mobile" class="uk-offcanvas">
+                        <a href="" class="uk-close"></a>
+                        <ul class="uk-navbar-nav">
+                            <li class="uk-active active"><a href="#">Главная</a></li>
+                            <li><a href="#">О нас</a></li>
+                            <li><a href="#">Типы картин</a></li>
+                            <li><a href="#">Галерея</a></li>
+                            <li><a href="#">Статьи</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </header>
+        <!-- Header End -->
+    </div>
+    <div class="tm-cont-wrap">
     <div class="tm-global-wrap uk-grid">
             <!-- aside start-->
         <aside class="tm-global-wrap-left uk-width-large-1-3 uk-width-medium-1-3 uk-hidden-small">
@@ -218,6 +299,7 @@
             </section>
             <!-- sec4 end-->
         </div>
+    </div> <!-- Grid end -->
         <section class="tm-calculation-wrap"><!-- Calculation Start -->
 
                 <div id="git" class="tm-content-full">
@@ -267,12 +349,13 @@
         <div class="tm-map-wrap"><!-- Map Start -->
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aef7a6f4ade763ab6c24f9259eaa0a511b5e9b12411ecacfe0be8c6a53c2fa108&amp;width=100%&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
         </div><!-- Map End -->
-        <div class="tm-copy-wrap"><!-- Copyright Start -->
-            <div id="copy" class="tm-content-full uk-text-center">
-                ©  ASTA M. Модульные картины. 2017. Все права защищены.
-            </div>
-        </div><!-- Copyright Start -->
     </div>
+    <div class="tm-copy-wrap"><!-- Copyright Start -->
+        <div id="copy" class="tm-content-full uk-text-center">
+            ©  ASTA M. Модульные картины. 2017. Все права защищены.
+        </div>
+    </div><!-- Copyright End -->
+</div>
     <!-- Formstyler Plugin -->
     <link href="js/formstyler-plugin/jquery.formstyler.css" rel="stylesheet" />
     <link href="js/formstyler-plugin/jquery.formstyler.theme.css" rel="stylesheet" />
