mobile menu corrected

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -134,7 +134,7 @@
                     </nav>
                     <div id="topnavbar-mobile" class="uk-offcanvas">
                         <a href="" class="uk-close"></a>
-                        <ul class="uk-navbar-nav">
+                        <ul class="uk-navbar-nav topnavbar-mobile">
                             <li class="uk-active active"><a href="#">Главная</a></li>
                             <li><a href="#">О нас</a></li>
                             <li><a href="#">Типы картин</a></li>
