range slider update and select choose bugs fixed

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -203,9 +203,11 @@
                     <div class="uk-grid">
                         <div class="uk-width-medium-1-2">
                             <a href="#my-id" class="uk-text-center tm-api" data-uk-modal>Подобрать из каталога</a>
+                            <button class="tm-button-dis uk-text-center" disabled>Подобрать из каталога</button>
                         </div>
                         <div class="uk-width-medium-1-2">
                             <a href="" class="js-file uk-text-center">Загрузить</a>
+                            <button class="tm-button-dis uk-text-center" disabled>Загрузить</button>
                         </div>
                     </div>
                 </div>
@@ -281,7 +283,7 @@
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Выбор изображения</label>
                                         <a href="#my-id" class="uk-text-center tm-api" data-uk-modal>Подобрать из каталога</a>
-
+                                        <button class="tm-button-dis uk-text-center" disabled>Подобрать из каталога</button>
                                         <div id="my-id" class="uk-modal tm-modal">
                                             <div class="uk-modal-dialog uk-modal-dialog-large">
                                                 <div class="uk-grid tm-modal-form-wrap">
@@ -335,6 +337,7 @@
                                         <input type="file" class="uk-hidden" oi-file="options"  id="logo"  accept="image/*,image/jpeg,image/png,image/jpg"> 
                                          <!--  <img src="" id="imgprvw" alt="">   -->
                                          <a href="" class="js-file uk-text-center">Загрузить</a>
+                                         <button class="tm-button-dis uk-text-center" disabled>Загрузить</button>
                                     </div>
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
@@ -349,6 +352,7 @@
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Размер изображения (см)</label>
+                                        <!-- <button class="dis" data-behaviour="toggle">DIS</button> -->
                                         <div class="tm-constructor-form-range">
                                             <div class="tm-constructor-val val-left">50</div>
                                             <div class="tm-constructor-val val-right">135</div>
