block icon feature added

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -267,13 +267,17 @@
                                 </div>
                             </div>
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
-                            <i class="tm-canv-icon tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
-                            <i class="tm-canv-icon tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
                             <!-- <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover" ></i> 
                             <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover" ></i>  -->
-                            <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Сохранить"></i>
+                            <!-- <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Сохранить"></i> -->
+                            <i class="tm-canv-icon sub uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
+                            <i class="tm-canv-icon sub uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
+                            <i class="tm-canv-icon sub uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+
+                            <i class="tm-canv-icon org tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+                            <i class="tm-canv-icon org tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
+                            <i class="tm-canv-icon org tm-check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
                             <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Очистить всё"></i>
-                            <i class="tm-canv-icon tm-check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
                         </div>
                     </div>
                     <div class="tm-constructor-left">
@@ -513,15 +517,19 @@
                 <a class="uk-modal-close uk-close"></a>
                <h4>Как пользоваться конструктором</h4>
                 <div class="uk-overflow-container">
-                    <div class="tm-see-pics uk-text-center">
-                        <ul>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                            <li>Lorem</li>
-                        </ul>     
+                    <div class="tm-pics">
+                        <ol>
+                            <li>Нажмите кнопку "ПОДОБРАТЬ ИЗ КАТАЛОГА" (картинка из интернет стока) или "ЗАГРУЗИТЬ" (картинка из вашего компьютера), выберите изображение и нажмите на него (картинка загрузится в конструктор автоматически)</li>
+                            <li>Выставьте наиболее подходящий размер изображения с помощью ползунка в пределах 50 - 135 см </li>
+                            <li>Выберите материал, покрытие, подрамник, стилизацию картины с помощью блока опций</li>
+                            <li>Далее добавляем модули (рамки) с помощью опции "Добавить элемент" в самом конструкторе (белая иконка справа вверху)</li>
+                            <li>Убрать какой-то блок можно с помощью опции "Удалить элемент" (крестик) предварительно кликнув по нужному элементу</li>
+                            <li>Вы можете выбрать другую картинку или изменить материал, покрытие, подрамник, стилизацию в блоке опции и размер картины до нажатия кнопки "Готово"</li>
+                            <li>Когда вы выстроили блоки в нужном порядке, выбрали нужный размер картины, материал, покрытие, подрамник, стилизацию и готовы завершить работу с конструктором нажмите "Готово" (галочка)</li>
+                            <li>Вы увидите готовую модульную картину в конструкторе, а так же ее цену в блоке "Стоимость"</li>
+                            <li>Кликните по любому изображению из секции "Посмотреть в интерьере" (секция под конструктором) и посмотрите как выглядит картина в интерьере.</li>
+                            <li>Для того, чтобы создать картину заново, нажмите кнопку "Очистить все" в блоке кнопок конструктора и повторите все действия с пункта 1 по порядку</li>
+                        </ol>     
                     </div>
                 </div>
             </div>
