book btn func added

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -432,7 +432,7 @@
 
                             <div class="uk-grid">
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
-                                    <button class="tm-constructor-form-order-btn tm-book uk-text-center">Заказать</button>
+                                    <button class="tm-constructor-form-order-btn tm-book uk-text-center" disabled>Заказать</button>
                                     <!-- <a href="#see-in" class="uk-button tm-api" data-uk-modal>Посмотреть в интерьере</a> -->
                                 </div>
                             </div>
