tooltip show bug fixed

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -268,11 +268,11 @@
                             </div>
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
                             <!-- <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover" ></i> 
-                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover" ></i>  -->
+                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover" ></i>   -->
                             <!-- <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Сохранить"></i> -->
-                            <i class="tm-canv-icon sub uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
-                            <i class="tm-canv-icon sub uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
-                            <i class="tm-canv-icon sub uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+                            <i class="tm-canv-icon sub close uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
+                            <i class="tm-canv-icon sub check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
+                            <i class="tm-canv-icon sub square uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
 
                             <i class="tm-canv-icon org tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
                             <i class="tm-canv-icon org tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
