constructor icon smart switching

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -273,11 +273,12 @@
                             <i class="tm-canv-icon sub close uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
                             <i class="tm-canv-icon sub check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
                             <i class="tm-canv-icon sub square uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+                            <i class="tm-canv-icon sub trash uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
 
                             <i class="tm-canv-icon org tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
                             <i class="tm-canv-icon org tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
                             <i class="tm-canv-icon org tm-check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
-                            <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Очистить всё"></i>
+                            <i class="tm-canv-icon org tm-rem uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Очистить всё"></i>
                         </div>
                     </div>
                     <div class="tm-constructor-left">
