--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -347,8 +347,40 @@
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
-                                        <!-- <button onclick="return false;" class="uk-button uk-button-primary">Загрузить</button> -->
+                                        <p class="uk-form-help-block">Выберите форму для картины</p>
+                                        <button class="js-shape uk-text-center" disabled>выбрать форму</button> 
                                         <!-- <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i>  -->
+                                        <div id="js-shape-modal" class="uk-modal tm-modal">
+                                            <div class="uk-modal-dialog uk-modal-dialog-large">
+                                                <div class="uk-grid tm-modal-form-wrap">
+                                                    <div class="uk-width-large-1-3">
+                                                        <label class="uk-form-label tm-modal-label">Выберите форму</label>
+                                                        <p class="tm-modal-info">Кликните по выбранной картинке, что бы загрузить форму в конструктор</p>
+                                                    </div>
+                                                    <div class="uk-width-large-1-3 tm-modal-select">
+                                                    </div>
+                                                    <div class="uk-width-large-1-3">
+                                                       
+                                                    </div>
+                                                </div>
+                                                <div class="uk-overflow-container">
+                                                    <div class="uk-grid">
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item" data-number="0">
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
+                                                            <div class="item double" data-number="1">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                    </div>
+                                                </div>
+                                                <a class="uk-modal-close uk-close"></a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
