--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -273,7 +273,7 @@
                             <i class="tm-canv-icon sub close uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
                             <i class="tm-canv-icon sub check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
                             <i class="tm-canv-icon sub square uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
-                            <i class="tm-canv-icon sub trash uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+                            <i class="tm-canv-icon sub trash uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Очистить всё"></i>
 
                             <i class="tm-canv-icon org tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
                             <i class="tm-canv-icon org tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
@@ -370,8 +370,21 @@
                                                                 <div class="shape"></div>
                                                             </div>
                                                         </div> 
-                                                        <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
-                                                            <div class="item double" data-number="1">
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh1" data-number="1">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh2" data-number="2">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh3" data-number="3">
+                                                                <div class="shape"></div>
                                                                 <div class="shape"></div>
                                                                 <div class="shape"></div>
                                                             </div>
