added 5 new shapes (common shapes finished)

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -389,6 +389,39 @@
                                                                 <div class="shape"></div>
                                                             </div>
                                                         </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh4" data-number="4">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh5" data-number="5">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh6" data-number="6">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh7" data-number="7">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
                                                     </div>
                                                 </div>
                                                 <a class="uk-modal-close uk-close"></a>
